# svg2saty

./: Cargo.toml  Makefile
satysfi/: svg.satyh
src/: body.rs  main.rs  make_satysfi_file_text.rs
src/body/: circle.rs  color.rs  path.rs  svg_tag.rs
src/body/path/: show_para.rs  show_posi.rs
