[package]
name = "svg2saty"
version = "0.1.0"
authors = ["puripuri2100 <puripuri2100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.8.0"
clap = "2.20.3"
cssparser = "0.27.2"
css-color = "0.1.1"
